cmake_minimum_required(VERSION 2.8)
project( Visual_Servoing_Visp )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( OpenCV 3.2.0 )
find_package(VISP REQUIRED)
include_directories(${VISP_INCLUDE_DIRS})
add_executable( basic_ibvs basic_ibvs.cpp )
add_executable( ibvs_sim1 ibvs_sim1.cpp )
add_executable( ibvs_sim2 ibvs_sim2.cpp )
add_executable( ibvs_sim3 ibvs_sim3.cpp )
add_executable( basic_ibvs_plot basic_ibvs_plot.cpp )
add_executable( basic_ibvs_plot_gain_adapt basic_ibvs_plot_gain_adapt.cpp )
add_executable( basic_ibvs_plot_cts_gain_adapt basic_ibvs_plot_cts_gain_adapt.cpp )

target_link_libraries( basic_ibvs ${OpenCV_LIBS} )
target_link_libraries( basic_ibvs ${VISP_LIBRARIES})
target_link_libraries( basic_ibvs_plot ${OpenCV_LIBS} )
target_link_libraries( basic_ibvs_plot ${VISP_LIBRARIES})
target_link_libraries( basic_ibvs_plot_gain_adapt ${OpenCV_LIBS} )
target_link_libraries( basic_ibvs_plot_gain_adapt ${VISP_LIBRARIES})
target_link_libraries( basic_ibvs_plot_cts_gain_adapt ${OpenCV_LIBS} )
target_link_libraries( basic_ibvs_plot_cts_gain_adapt ${VISP_LIBRARIES})
target_link_libraries( ibvs_sim1 ${OpenCV_LIBS} )
target_link_libraries( ibvs_sim1 ${VISP_LIBRARIES})
target_link_libraries( ibvs_sim2 ${OpenCV_LIBS} )
target_link_libraries( ibvs_sim2 ${VISP_LIBRARIES})
target_link_libraries( ibvs_sim3 ${OpenCV_LIBS} )
target_link_libraries( ibvs_sim3 ${VISP_LIBRARIES})
